fix designer flow name overflow

--- a/assets/less/blu/blu-toolbar.less
+++ b/assets/less/blu/blu-toolbar.less
@@ -15,8 +15,32 @@ md-toolbar.BluToolbar {
   color: #14568F;
   height: @blu-toolbar-height;
   min-height: @blu-toolbar-height;
-  padding: 0 0.5em;
+
+  .flex-display();
+  .align-items(center);
+  padding-right: .5em;
+  padding-left: 1em;
 }
+
+.BluToolbar-item {
+  .flex-shrink(0);
+  .flex-grow(1);
+  .align-items(center);
+  max-width: 100%;
+  text-decoration: none;
+  width: 0;
+}
+
+.BluToolbar-nowrap {
+  .align-items(center);
+  display: inline-block;
+  width: 100%;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 
 md-toolbar .BluToolbar-menuButton {
   color: #14568F;
@@ -55,7 +79,6 @@ md-toolbar .BluToolbar-menuButton {
   .flex(1);
   .flex-direction(row);
   .align-items(center);
-  margin-left: 1em;
 }
 
 .BluToolbar-align--left {
