--- a/assets/less/breadcrumbs.less
+++ b/assets/less/breadcrumbs.less
@@ -32,9 +32,6 @@
 }
 
 .BreadcrumbBar-item {
-  border-bottom: 2px solid #FFF;
-  padding: 14px 10px;
-
   font-size: 16px;
   font-family: 'citrixsans-regular', sans-serif;
   text-transform: none;
@@ -67,6 +64,8 @@
 
 .BreadcrumbBar-itemSeperator {
   color: #babbbf;
+  font-size: 20px;
+  padding: 0 .25em;
 }
 
 .BreadcrumbBar-link {
