--- a/assets/less/lookup.less
+++ b/assets/less/lookup.less
@@ -94,7 +94,7 @@
 }
 
 .designer-lookup--header {
-  margin: 0 24px;
+  margin: 0 .5em;
   max-width: 600px;
 
   font-size: 18px;
